--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -21,7 +21,7 @@ body {
     right: -20px;
 }
 
-#colLeft {
+.colLeft {
     border-radius: 60px 0 0 0;
 }
 
@@ -65,12 +65,12 @@ body {
     margin: 30px auto 0 auto;
 }
 
-#p1Zxz {
+.p1Zxz {
     color: #ffffff;
     text-align: center;
 }
 
-#prev, #next {
+.prev, .next {
     margin: 0;
 }
 
@@ -83,7 +83,7 @@ dt {
     text-align: left;
 }
 
-#aboutOur {
+.aboutOur {
     border-left: 1px solid #DCDCDC;
 }
 
@@ -100,7 +100,6 @@ dt {
     position: absolute;
     width: 250px;
     height: 50px;
-    border-radius: 0;
     left: 550px;
     top: 500px;
     border: 1px solid #03a6ff;
@@ -154,57 +153,59 @@ dt {
 
 /*首页导航部分*/
 #daohang {
-    width: 90%;
-    height: 350px;
-    border: 2px solid #D3D3D3;
-    border-radius: 5px;
-    margin: auto;
-    margin-top: 20px;
-    box-shadow: 0px 5px 5px #C0C0C0;
+    width: 1226px;
+    height: 460px;
+    /*border: 2px solid #D3D3D3;*/
+    /*border-radius: 5px;*/
+    margin:40px auto;
+    /*margin-top: 20px;*/
+    /*box-shadow: 0px 5px 5px #C0C0C0;*/
 }
 
 /*导航文字区*/
 #daohang1 {
     display: inline-block;
-    background: #2b333b;
+    background: #606060;
     width: 16%;
     height: 100%;
-    border: 1px solid #D3D3D3;
-    border-radius: 5px 0 0 5px;
-}
-
-#daohang1 a {
-    color: rgba(255, 255, 255, .6);
-    text-decoration: none;
+    /*border: 1px solid #D3D3D3;*/
+    /*border-radius: 5px 0 0 5px;*/
 }
 
 #daohang1 > ul {
-    padding-left: 8px;
+    padding: 10px 0;
     height: 90%;
     margin: auto;
-    font-size: 18px;
+    font-size: 14px;
     list-style: none;
-    margin-top: 17px;
 }
 
-#daohang1 li {
-    border-radius: 5px 0 0 5px;
+.daohangLi{
+    position: relative;
     text-align: left;
-    padding-left: 15px;
+    padding:0 20px;
     width: 100%;
-    height: 20%;
-    line-height: 63px;
+    height: 42px;
+    line-height:42px;
 }
 
-#daohang1 span {
-    margin-right: 30px;
-    margin-top: 21px;
-    font-size: 15px;
+.daohangLi span {
+    position: absolute;
+    right:20px;
+    top:0px;
+    color:white;
+    margin-top: 13px;
+    font-size: 13px !important;
 }
 
 .daohangLi:hover {
     cursor: pointer;
-    background: rgba(255, 255, 255, .6);;
+    background: #D51007;
+}
+
+.daohangLi a{
+    display: block;
+    color:white;
 }
 
 /*轮播导航*/
