--- a/src/main/resources/static/css/specialEffects3.css
+++ b/src/main/resources/static/css/specialEffects3.css
@@ -1,5 +1,5 @@
 #content {
-    background: url(../img/specil2.jpg);
+    background-image: url(../img/specil2.jpg);
     height: 615px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -7,10 +7,17 @@
 }
 
 #titleH1 {
-    position: relative;
-    text-align: center;
-    top: -500px;
-    text-shadow: black 5px 3px 3px;
+    display: block;
+    width:800px;
+    height:60px;
+    line-height:60px;
+    text-align:center;
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
     color: white;
-    font-size: 50px;
+    font-size: 35px;
 }
