--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,263 +1,86 @@
-
-* {
-    margin: 0px;
-    padding: 0px;
+#navHeader{
+	padding-left: 60px;
+	padding-right: 60px;
+}
+#skssA{
+	padding: 0px;
+}
+#skssPic{
+	max-height: 100%;
+}
+#navLabel{
+	margin-left: 30px !important;
+	border: 1px solid red;
+}
+.margin20px{
+	margin-left: 20px;
+	font-size: 17px;
+	font-weight: 600;
 }
 
-a {
-    text-decoration: none !important;
-    cursor: pointer;
+#perDiv{
+}
+#perA{
+	padding: 0px;
+}
+#perPic{
+	max-height: 100%;
 }
 
-/*新nav=================*/
-#nav {
-    padding: 0px;
-    width: 100%;
-    height: 60px;
-    border-radius: 0;
-    box-shadow: 0px 5px 5px #C0C0C0;
+
+.menuContent {
+	position: relative;
+	float: left;
+	width: 216px;
+	height: 444px;
+	z-index: 2;
+	padding-top: 12px;
+	background: #2b333b;
+	border-bottom-left-radius: 4px;
+	font-weight: 400;
 }
 
-#logo {
-    display: inline-block;
-    width: 11%;
-    height: 60px;
+.menuContent{
+	box-sizing: border-box;
 }
 
-#logoPic {
-    float: right;
-    padding-top: 3px;
-    width: 84%;
-    height: 89%;
+.menuContent .item {
+	height: 60px;
+	line-height: 60px;
+	font-size: 12px;
+	cursor: pointer;
+	padding-left: 12px;
+	position: relative;
 }
 
-#nav-caidan {
-    margin-left: 40px;
-    display: inline-block;
-    width: 50%;
-    height: 60px;
-    vertical-align: top;
+.menuContent .item .group {
+	font-size: 16px;
 }
 
-#nav-caidan li {
-    /*去除小圆点*/
-    list-style: none;
-    display: inline;
-    margin-left: 6%;
-    line-height: 60px;
-    vertical-align: middle;
+.menuContent .item>a {
+	display: block;
+	color: rgba(255,255,255,.6);
+	padding: 0 16px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	height: 60px;
+	transition: all .1s;
+}
+a:link{
+	text-decoration: none;
 }
 
-/*新nav*/
-.nav-a {
-    font-size: 17px;
-    color: #808080;
-    background: white;
-    font-weight: 600;
+
+.menuContent .item i {
+	position: absolute;
+	right: 16px;
+	top: 24px;
+	color: rgba(255,255,255,.5);
+	font-size: 16px;
 }
 
-.nav-a:hover {
-    text-decoration: none;
-    color: black;
-}
-
-#nav-label {
-    font-size: 3px;
-    display: inline-block;
-    width: 23px;
-    height: 15px;
-    text-align: center;
-    vertical-align: top;
-    margin-top: 15px;
-}
-
-#nav-input {
-    display: inline-block;
-    height: 46px;
-    width: 19%;
-    vertical-align: top;
-    border-bottom: 1px solid #C0C0C0;
-}
-
-/*sousou搜索框*/
-#sousuoInput {
-    outline: none;
-    padding: 0px;
-    margin: 0px;
-    height: 30px;
-    width: 80%;
-    border: none;
-    margin-top: 15px;
-    font-size: 15px;
-}
-
-#ssDiv {
-    text-align: center;
-    float: right;
-    width: 51px;
-    height: 30px;
-    border-bottom: 1px solid #C0C0C0;
-    margin-top: 15px;
-}
-
-#sousouSpan {
-    cursor: pointer;
-    text-align: center;
-    line-height: 24px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #A9A9A9;
-    width: 35px;
-    height: 24px;
-    border-radius: 44%;
-    vertical-align: sub;
-}
-
-#sousouSpan:hover {
-    background: rgba(240, 20, 20, .4);
-}
-
-#perPicDiv {
-    float: right;
-    margin-right:50px;
-    width: 52px;
-    height: 60px;
-    vertical-align: top;
-    position: relative;
-}
-
-#perPic {
-    margin-top: 2px;
-    width: 52px;
-    height: 52px;
-}
-
-#perPicDiv:hover #person-detail{
-    /*display: block;*/
-    -webkit-animation:userInfo .5s cubic-bezier(0.22, 0.58, 0.12, 0.98) 0s 1 normal forwards;
-    -o-animation:userInfo .5s cubic-bezier(0.22, 0.58, 0.12, 0.98) 0s 1 normal forwards;
-    animation:userInfo .5s cubic-bezier(0.22, 0.58, 0.12, 0.98) 0s 1 normal forwards;
-}
-
-@keyframes userInfo {
-    0%{
-        opacity: 0;
-    }
-    70%{
-        opacity: 1;
-        height: 150px;
-        width: 260px;
-    }
-    100%{
-        opacity: 1;
-        height: 150px;
-        width: 250px;
-    }
-}
-@-webkit-keyframes userInfo {
-    0%{
-        opacity: 0;
-    }
-    70%{
-        opacity: 1;
-        height: 150px;
-        width: 260px;
-    }
-    100%{
-        opacity: 1;
-        height: 150px;
-        width: 250px;
-    }
-}
-
-/*个人悬浮*/
-#person-detail {
-    display: none;
-    opacity: 0;
-    border-radius: 10px;
-    width: 250px;
-    height: 0px;
-    position: absolute;
-    z-index: 999;
-    right: 0px;
-    background: #F5F5F5;
-}
-
-#person-pic {
-    float: left;
-    margin: 10px;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-}
-
-#person-pic > img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-}
-
-#person-name {
-    float: left;
-    font-weight: 600;
-    font-size: 18px;
-    margin-top: 20px;
-}
-
-#loginOut {
-    margin-top: 10px;
-    padding-left: 10px;
-    padding-top: 10px;
-    float: left;
-    width: 250px;
-    height: 50px;
-    border-top: 2px solid #DCDCDC;
-    background: #F5F5F5;
-    border-radius: 10px;
-}
-
-#per-sz > img {
-    float: left;
-    left: 10px;
-    width: 30px;
-    height: 30px;
-}
-
-#per-sz > a {
-    text-decoration: none;
-    color: #808080;
-    float: left;
-    margin-left: 5px;
-    margin-top: 5px;
-    font-size: 16px;
-}
-
-#per-sz > a:hover {
-    color: #000000;
-}
-
-#login-out > img {
-    margin-top: 3px;
-    float: left;
-    width: 27px;
-    height: 27px;
-    margin-left: 20px;
-}
-
-#login-out > a {
-    text-decoration: none;
-    color: #808080;
-    float: left;
-    margin-left: 5px;
-    margin-top: 5px;
-    font-size: 16px;
-}
-
-#login-out > a:hover {
-    color: #000000;
-}
-
-.container {
-    padding-left: 0px;
-    margin-left: 0px;
+#middleDiv{
+	padding-left: 62px;
+	border: 1px solid red;
+	height: 444px;
 }
