--- a/src/main/resources/static/css/person.css
+++ b/src/main/resources/static/css/person.css
@@ -94,11 +94,13 @@
 
 /*个人资料部分*/
 #edit-pic {
+    border: 1px solid red;
     margin: auto;
     margin-top: 1%;
     text-align: center;
     border: 1px solid #DCDCDC;
-    width: 12%;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
 }
 
@@ -131,7 +133,8 @@
 
 #edit-name img {
     display: inline-block;
-    max-height: 50%;
+    height: 20px;
+    width:20px;
     float: right;
     cursor: pointer;
 }
@@ -231,7 +234,8 @@
 }
 
 #fabu-other-jiage img {
-    max-height: 60%;
+    width:20px;
+    height:20px;
 }
 
 #fabu-other-jiage span {
@@ -263,14 +267,11 @@
     color: #03a6ff;
     border: 1px solid #03a6ff;
     background: white;
-    width: 40%;
-    height: 20%;
-    margin-right: 5%;
+    width: 120px;
+    height: 30px;
+    top:110px;
 }
 
-#edit, #delete, #show {
-    width: 30%;
-}
 
 #show {
     float: left;
@@ -284,8 +285,11 @@
     margin-left: 70%
 }
 
-#deleteSc {
-    margin-left: 50%;
+#deleteSc{
+    float: right;
+}
+#showSc{
+    margin-left: 70%
 }
 
 .pagination li {
@@ -306,8 +310,4 @@
 #souScUl, #souRecycleUl {
     float: right;
     margin-right: 10%;
-}
-
-#souScInput {
-
 }
