--- a/src/main/resources/static/newFileInput/css/fileinput.css
+++ b/src/main/resources/static/newFileInput/css/fileinput.css
@@ -212,17 +212,18 @@
 
 .krajee-default.file-preview-frame {
     /*如果需要图片居左，删除display: inline-block;，增加 float: left;即可*/
-    display: inline-block;
-    margin: 8px;
+    /*display: inline-block;*/
+    float: left;
     border: 1px solid #ddd;
     box-shadow: 1px 1px 5px 0 #a2958a;
-    padding: 6px;
+    padding: 3px;
     text-align: center;
+    margin-left: 17px;
 }
 
 .krajee-default.file-preview-frame .kv-file-content {
-    width: 213px;
-    height: 160px;
+    width: 160px;
+    height: 130px;
 }
 
 .krajee-default.file-preview-frame .file-thumbnail-footer {
