--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -119,6 +119,45 @@ dt{
 	width: 100%;
 	height: 100%;
 }
+.item1-title{
+	width:100%;
+	height:60px;
+	position: absolute;
+	bottom: 0px;
+	background: rgba(55,60,64,0.8);
+	font-size: 25px;
+	color: white;
+	text-align: center;
+	line-height: 60px;
+	border-radius: 5px 5px 5px 5px;
+}
+.item2-title{
+	position: absolute;
+	bottom: 20px;
+	right:150px;
+	width:300px;
+	height: 110px;
+	background:rgba(0,0,0,0.5);
+	border-radius: 10px;
+	color: white;
+	text-align: center;
+	font-size: 23px;
+	line-height: 50px;
+}
+.item1{
+	background: url("../img/sdkjdx.jpg");
+}
+.item2{
+	background: url("../img/item2Bg.jpg");
+}
+.item2-title button{
+	font-size: 15px;
+	font-weight: bold;
+	width:130px;
+	height: 40px;
+	background:#03a6ff;
+	border: none;
+}
 .carousel-inner{
 	width: 100%;
 	height: 100%;
@@ -132,7 +171,6 @@ dt{
 	position: relative;
 	width:1200px;
 	height: 350px;
-	border: 2px solid #D3D3D3;
 	border-radius: 5px;
 	margin: auto;
 	margin-top: 20px;
