--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -218,10 +218,10 @@ dt{
 
 /*轮播导航*/
 #daohang2{
-	display: inline-block;
-	float: right;
-	width: 996px;
-	height: 100%;
+	display:inline-block;
+	float:right;
+	width:996px;
+	height:100%;
 }
 .daohang1Hover{
 	position: absolute;
@@ -275,6 +275,7 @@ dt{
 }
 
 .recPic{
+	margin-right:8px;
 	position:relative;
 	width:35%;
 	display: inline-block;
